--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 @layer components {
-    .input {
-        @apply w-full p-2 transition-all rounded border-2 border-neutral-300 focus:border-black focus:border-2 outline-none
-    }
+  .input {
+    @apply w-full p-2 transition-all rounded border-2 border-neutral-300 focus:border-black focus:border-2 outline-none;
+  }
 
-    .label {
-        @apply block mb-2 font-medium w-full
-    }
+  .label {
+    @apply block mb-2 font-medium w-full;
+  }
 }
